fixed stylesheets, colors and wrapped main container by wdiv element.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,9 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$basebgcolor: #eff0eb;
+$postbgcolor: #fff;
+
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
